create 4 api skeleton, and interface of repo for create, update and read account
