# repository/types.go
@@ -8,3 +8,17 @@ type GetTestByIdInput struct {
 type GetTestByIdOutput struct {
 	Name string
 }
+
+type Account struct {
+	Id       string
+	FullName string
+	Phone    string
+	Password string
+}
+
+type Auth struct {
+	Id        string
+	AccountId string
+	Token     string
+	Expired   string
+}
